--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,7 +34,7 @@ li > ul, li > ol { margin-bottom: 0; }
 h1, h2, h3, h4, h5, h6 { font-weight: 400; }
 
 /** Links */
-a { color: rgb(158, 158, 158); text-decoration: none; }
+a { color:#4d83da; text-decoration: none; }
 /*a:visited { color: #1756a9; }*/
 a:hover { color: #111; text-decoration: underline; }
 .social-media-list a:hover { text-decoration: none; }
@@ -130,6 +130,7 @@ table td { border: 1px solid #e8e8e8; }
   /*color: rgb(211, 150, 247);*/
   color: #fff;
   /*background-color: rgb(241, 110, 241);*/
+  /*background-color: #d16cf0;*/
   background-color: violet;
   width: fit-content;
   font-family: monospace;
