--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,9 +34,9 @@ li > ul, li > ol { margin-bottom: 0; }
 h1, h2, h3, h4, h5, h6 { font-weight: 400; }
 
 /** Links */
-a { color:#4d83da; text-decoration: none; }
-/*a:visited { color: #1756a9; }*/
-a:hover { color: #111; text-decoration: underline; }
+a { color: #4d83da; text-decoration: none; }
+a:visited { color: #4d83da; }
+a:hover { color: #4d83da; text-decoration: underline; }
 .social-media-list a:hover { text-decoration: none; }
 .social-media-list a:hover .username { text-decoration: underline; }
 
@@ -80,10 +80,12 @@ table td { border: 1px solid #e8e8e8; }
   line-height: 54px; 
   margin-bottom: 0;
   float: left; 
-  color: rgb(64, 34, 235);
+  /*color: rgb(64, 34, 235);*/
+  /*color: #8b9cff;*/
+  color: #4d83da;
 }
 .site-title, .site-title:visited {
-  color: rgb(64, 34, 235); 
+  color: #4d83da; 
 }
 
 .site-nav { float: right; line-height: 54px; }
@@ -146,9 +148,8 @@ table td { border: 1px solid #e8e8e8; }
   display: block; 
   font-size: 24px; 
   font-family: monospace;
-  /*color: rgb(70, 97, 255);*/
-  color: rgb(139, 156, 255);
- 
+  /*color: #8b9cff;*/
+  color:#4d83da;
 }
 
 /** Posts */
@@ -160,22 +161,14 @@ table td { border: 1px solid #e8e8e8; }
   font-size: 36px; 
   line-height: 1; 
   font-family: Arial, Helvetica, sans-serif;
+  /*color:#8b9cff;*/
+  /*color:#4d83da;*/
+  color: #354259;
 }
 
 .rss-subscribe a{
-  color: #918989;
+  color: #1363DF;
 }
-
-@media screen and (max-width: 800px) { 
-  .post-title { 
-    font-size: 28px; 
-  } 
-
-  .post-link{
-    font-size: 17px;
-  }
-}
-
 
 .post-content { margin-bottom: 30px; }
 .post-content h2 { font-size: 32px; }
